forest and particle fixes; cleanup